Changes after KWord-1.3-beta3
=============================
- Fixed handling of part frames (clicking didn't select it anymore, #63041)
- Fixed cursor shape when pressing Ctrl.
- Unbreak text view mode (cursor disappeared, #57554)

Changes after KWord-1.3-beta2
=============================
- Right-click on a selected frame shouldn't unselect it
- Esc to deselect all frames
- Fixed line-height bug due to hyphenation
- Make the text view mode work again
- Fix "frame borders always painted/printed even when off" (#45907)

Changes after KWord-1.3-beta1
=============================

- Frames default to "auto-resize" mode instead of "auto-create-new-page"
- Better handing of "auto-resize" mode (manually-set size acts as minimum size)
- Make the find dialog avoid the area where the match is (requires kdelibs-CVS, will be in kde-3.2)
- New: PDF import filter
(see also koffice/lib/CHANGES, especially the kotext part)

Changes after KWord-1.2
=======================
- Spellchecker can spell check only a selection
- Shadow is a character property
- Language added as a new character property
- Paragraph numbering: simple lists are not restarted by simple text in between
- Paragraph numbering: new properties "restart numbering at this paragraph",
  "number of parent levels to display".
- Add "copy link"
- Add "Add to bookmark"
- Now we can change "picture path" / "personal expression path"
- Add "Remove link"
- Add font properties : change relative font size when we sub/super script font
- Add support to add offset from baseline
- Now koinsertlink use "Recent document".
- Add support to insert directly cursor
- Add support for "word by word" format attribute.
- Add new variable : Next page number, previous page number
- Add time/date variable offset
- Fix #24242 add variable : created/modified/printed document date
- Now we can copy text of comment.
- Add support for convert table to text
- Add support for font attribute ( lowercase/uppercase )